--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -35,7 +36,9 @@ Ao acordar no dia eguinte notou a presença de infectados zumbis olhando para el
 Voltar para a primeira pergunta[[ Will manda a mensagem -&gt;primeira pergunta ]]</tw-passagedata><tw-passagedata pid="16" name=" código NRZ" tags="" position="1003,98" size="100,100">
 [[ Will peda ajuda para Lizzy -&gt; Will pede ajuda para Lizzy]]</tw-passagedata><tw-passagedata pid="17" name=" ir para o servidor" tags="" position="302,100" size="100,100">Lizzy entra em uma sala aonde fica o servidor, e tenta acessá-lo, mas está protegido com uma senha. A pergunta para a senha é quais são os dois tipos de topologia que existem?
 [[ Estruturada e óptica -&gt; Estruturada e óptica]]
-[[ Física e lógica -&gt; Física e lógica]]</tw-passagedata><tw-passagedata pid="18" name=" Estruturada e óptica" tags="" position="503,95" size="100,100">Voltar para a pergunta [[ ir para o servidor -&gt; ir para o servidor]]</tw-passagedata><tw-passagedata pid="19" name=" Física e lógica" tags="" position="498,299" size="100,100">Resposta certa. Lizzy derruba o servidor, por tempo suficiente para o Will entrar pelo portão do Armazem e sair, e depoiso conecta denovo.
+[[ Física e lógica -&gt; Física e lógica]]
+
+&lt;img src=&quot;20210319_102548.jpg&quot;&gt;</tw-passagedata><tw-passagedata pid="18" name=" Estruturada e óptica" tags="" position="503,95" size="100,100">Voltar para a pergunta [[ ir para o servidor -&gt; ir para o servidor]]</tw-passagedata><tw-passagedata pid="19" name=" Física e lógica" tags="" position="498,299" size="100,100">Resposta certa. Lizzy derruba o servidor, por tempo suficiente para o Will entrar pelo portão do Armazem e sair, e depoiso conecta denovo.
 [[ pegar a vacina -&gt; pegar a vacina]]</tw-passagedata><tw-passagedata pid="20" name=" começa a jornada" tags="" position="0,694" size="100,100">Will descobriu recentemente que guardam as vacinas no armazém, que é muito vigiado e ninguém sem permissão pode passar pela tranca elétrica. Ele precisa tomar um decisão, enfrentar os guardas que ficam lá durante o dia, e correr  risco de ser visto por ouras pessoas, ou esperar o toque de recolher, enfrentar os guardas noturnos e não ser visto por ningém. Qual será a decisão dele?
 
 [[Enfrentar os guardas noturnos -&gt;Enfrentar os guardas noturnos]]
